Refactor branding and improve UI/UX across the application. Updated meta tags and descriptions for SEO, enhanced product and category displays with animations, and optimized layout for mobile devices. Adjusted text references from "7AAA/ZR quality" to "premium quality" for consistency. Added scroll-to-top functionality and improved loading states for better user experience.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flexnex - Premium Style. Affordable Flex.</title>
-    <meta name="description" content="Discover premium 7AAA/ZR quality replicas at Flexnex. From sneakers to watches, handbags to glasses - style that speaks, prices that don't break the bank." />
+    <title>Flexnex - Premium Quality Replicas | Style That Speaks</title>
+    <meta name="description" content="Discover premium quality replicas at Flexnex. From sneakers to watches, handbags to glasses - style that speaks, prices that don't break the bank." />
     <meta name="author" content="Flexnex" />
-    <meta name="keywords" content="premium replicas, 7AAA quality, affordable fashion, sneakers, watches, handbags, glasses" />
+    <meta name="keywords" content="premium replicas, quality fashion, affordable fashion, sneakers, watches, handbags, glasses" />
 
-    <meta property="og:title" content="Flexnex - Premium Style. Affordable Flex." />
-    <meta property="og:description" content="Discover premium 7AAA/ZR quality replicas at Flexnex. From sneakers to watches, handbags to glasses - style that speaks, prices that don't break the bank." />
+    <meta property="og:title" content="Flexnex - Premium Quality Replicas" />
+    <meta property="og:description" content="Discover premium quality replicas at Flexnex. From sneakers to watches, handbags to glasses - style that speaks, prices that don't break the bank." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://flexnex.vercel.app" />
-    <meta property="og:image" content="https://flexnex.vercel.app/og-image.png" />
+    <meta property="og:url" content="https://flexnex.com" />
+    <meta property="og:image" content="https://flexnex.com/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Flexnex - Premium Style. Affordable Flex." />
-    <meta name="twitter:description" content="Discover premium 7AAA/ZR quality replicas at Flexnex." />
-    <meta name="twitter:site" content="@flexnex" />
+    <meta name="twitter:title" content="Flexnex - Premium Quality Replicas" />
+    <meta name="twitter:description" content="Discover premium quality replicas at Flexnex." />
+    <meta name="twitter:image" content="https://flexnex.com/twitter-image.jpg" />
   </head>
 
   <body>
