Update branding and SEO elements across the application. Changed references from "premium quality replicas" to "premium fashion" in multiple components, revised meta tags for improved search visibility, and updated footer contact information for consistency. Enhanced product descriptions to better reflect the brand's focus on fashion and accessories.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flexnex - Premium Quality Replicas | Style That Speaks</title>
-    <meta name="description" content="Discover premium quality replicas at Flexnex. From sneakers to watches, handbags to glasses - style that speaks, prices that don't break the bank." />
+    <title>Flexnex - Premium Fashion & Style | Quality That Speaks</title>
+    <meta name="description" content="Discover premium fashion and style at Flexnex. From sneakers to watches, handbags to glasses - quality that speaks, prices that don't break the bank." />
     <meta name="author" content="Flexnex" />
-    <meta name="keywords" content="premium replicas, quality fashion, affordable fashion, sneakers, watches, handbags, glasses" />
+    <meta name="keywords" content="premium fashion, quality accessories, affordable luxury, sneakers, watches, handbags, glasses, style, fashion" />
 
-    <meta property="og:title" content="Flexnex - Premium Quality Replicas" />
-    <meta property="og:description" content="Discover premium quality replicas at Flexnex. From sneakers to watches, handbags to glasses - style that speaks, prices that don't break the bank." />
+    <meta property="og:title" content="Flexnex - Premium Fashion & Style" />
+    <meta property="og:description" content="Discover premium fashion and style at Flexnex. From sneakers to watches, handbags to glasses - quality that speaks, prices that don't break the bank." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://flexnex.com" />
     <meta property="og:image" content="https://flexnex.com/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Flexnex - Premium Quality Replicas" />
-    <meta name="twitter:description" content="Discover premium quality replicas at Flexnex." />
+    <meta name="twitter:title" content="Flexnex - Premium Fashion & Style" />
+    <meta name="twitter:description" content="Discover premium fashion and style at Flexnex." />
     <meta name="twitter:image" content="https://flexnex.com/twitter-image.jpg" />
   </head>
 
