Polish shop filters, category cards, WhatsApp copy

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexnex - Premium Fashion & Style | Quality That Speaks</title>
     <meta name="description" content="Discover premium fashion and style at Flexnex. From sneakers to watches, handbags to glasses - quality that speaks, prices that don't break the bank." />
